# CadexAssignment

./: .gitignore  CMakeLists.txt  CircleFactory.cpp  CircleFactory.h  README.md  main.cpp
Curves/: CMakeLists.txt
Curves/include/: Circle.h  Curve.h  Ellipse.h  Helix.h  curves
Curves/src/: Circle.cpp  Ellipse.cpp  Helix.cpp
src/: main.cpp
src/CurveFactories/: CurveFactory.h  Curvefactories.h  EllipseFactory.cpp  EllipseFactory.h  HelixFactory.cpp  HelixFactory.h
